; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/tests/extr_bp_signal.c___event.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/tests/extr_bp_signal.c___event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event_attr = type { i32, i64, i32, i32, i32, i32, i32, i32, i64, i32, i32, i32 }

@PERF_TYPE_BREAKPOINT = common dso_local global i32 0, align 4
@HW_BREAKPOINT_X = common dso_local global i32 0, align 4
@HW_BREAKPOINT_W = common dso_local global i32 0, align 4
@PERF_SAMPLE_IP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"failed opening event %llx\0A\00", align 1
@TEST_FAIL = common dso_local global i32 0, align 4
@F_SETFL = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@O_NONBLOCK = common dso_local global i32 0, align 4
@O_ASYNC = common dso_local global i32 0, align 4
@F_SETSIG = common dso_local global i32 0, align 4
@F_SETOWN = common dso_local global i32 0, align 4
@PERF_EVENT_IOC_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @__event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__event(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.perf_event_attr, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = call i32 @memset(%struct.perf_event_attr* %8, i32 0, i32 64)
  %11 = load i32, i32* @PERF_TYPE_BREAKPOINT, align 4
  %12 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 11
  store i32 %11, i32* %12, align 8
  %13 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 0
  store i32 64, i32* %13, align 8
  %14 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 8
  store i64 0, i64* %14, align 8
  %15 = load i32, i32* %5, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* @HW_BREAKPOINT_X, align 4
  br label %21

19:                                               ; preds = %3
  %20 = load i32, i32* @HW_BREAKPOINT_W, align 4
  br label %21

21:                                               ; preds = %19, %17
  %22 = phi i32 [ %18, %17 ], [ %20, %19 ]
  %23 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 10
  store i32 %22, i32* %23, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = ptrtoint i8* %24 to i64
  %26 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 1
  store i64 %25, i64* %26, align 8
  %27 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 2
  store i32 8, i32* %27, align 8
  %28 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 3
  store i32 1, i32* %28, align 4
  %29 = load i32, i32* @PERF_SAMPLE_IP, align 4
  %30 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 9
  store i32 %29, i32* %30, align 8
  %31 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 4
  store i32 1, i32* %31, align 8
  %32 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 5
  store i32 1, i32* %32, align 4
  %33 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 6
  store i32 1, i32* %33, align 8
  %34 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 7
  store i32 1, i32* %34, align 4
  %35 = call i32 (...) @perf_event_open_cloexec_flag()
  %36 = call i32 @sys_perf_event_open(%struct.perf_event_attr* %8, i32 0, i32 -1, i32 -1, i32 %35)
  store i32 %36, i32* %9, align 4
  %37 = load i32, i32* %9, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %44

39:                                               ; preds = %21
  %40 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %8, i32 0, i32 8
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @pr_debug(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i64 %41)
  %43 = load i32, i32* @TEST_FAIL, align 4
  store i32 %43, i32* %4, align 4
  br label %65

44:                                               ; preds = %21
  %45 = load i32, i32* %9, align 4
  %46 = load i32, i32* @F_SETFL, align 4
  %47 = load i32, i32* @O_RDWR, align 4
  %48 = load i32, i32* @O_NONBLOCK, align 4
  %49 = or i32 %47, %48
  %50 = load i32, i32* @O_ASYNC, align 4
  %51 = or i32 %49, %50
  %52 = call i32 @fcntl(i32 %45, i32 %46, i32 %51)
  %53 = load i32, i32* %9, align 4
  %54 = load i32, i32* @F_SETSIG, align 4
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @fcntl(i32 %53, i32 %54, i32 %55)
  %57 = load i32, i32* %9, align 4
  %58 = load i32, i32* @F_SETOWN, align 4
  %59 = call i32 (...) @getpid()
  %60 = call i32 @fcntl(i32 %57, i32 %58, i32 %59)
  %61 = load i32, i32* %9, align 4
  %62 = load i32, i32* @PERF_EVENT_IOC_RESET, align 4
  %63 = call i32 @ioctl(i32 %61, i32 %62, i32 0)
  %64 = load i32, i32* %9, align 4
  store i32 %64, i32* %4, align 4
  br label %65

65:                                               ; preds = %44, %39
  %66 = load i32, i32* %4, align 4
  ret i32 %66
}

declare dso_local i32 @memset(%struct.perf_event_attr*, i32, i32) #1

declare dso_local i32 @sys_perf_event_open(%struct.perf_event_attr*, i32, i32, i32, i32) #1

declare dso_local i32 @perf_event_open_cloexec_flag(...) #1

declare dso_local i32 @pr_debug(i8*, i64) #1

declare dso_local i32 @fcntl(i32, i32, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @ioctl(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
